[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2026-p1-anzai249"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "anzai249", email = "anzai381811169@gmail.com"}
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/anzai249/2026-p1-anzai249"

[tool.setuptools]
packages = ["src"]

[tool.pip-tools]
allow-unsafe = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.3"